@@ -4,9 +4,9 @@
 # $Revision$
 #----------------------------------------------------------------------
 
-proc headerTestFile {body} {
+proc headerTestFile {body args} {
     createTestFile $body
-    set res [execTestFile -header _testheader_]
+    set res [execTestFile {*}$args -header _testheader_]
     set ch [open _testheader_ r]
     set data [read $ch]
     close $ch
@@ -86,5 +86,9 @@ test header-3.1 {
         ##nagelfar syntax lrange 3
         # Changed
         ##nagelfar syntax lsort x x
-    }
+
+        # The special handling of if/try should not be causing any override
+        if {1 && 1} { list } else { list }
+        try { list } finally { list }
+    } -flags "-s syntaxdb86.tcl"
 } -result [list "##nagelfar syntax lsort x x"]
